--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="https://www.linkedin.com/in/muzna-muhajireen-a9493b252?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BflNowRWNR6uQnGdfK%2B7AFQ%3D%3D"
           target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://shorturl.at/amEST"
-          target="_blank" class="Fiverr"><i class="bi bi-phone-fill"></i></a>
+          target="_blank" class="Fiverr"><i class="bi bi-phone"></i></a>
       </div>
 
     </div>
