--- a/index.html
+++ b/index.html
@@ -336,12 +336,14 @@
           <h3 class="resume-title">Profile</h3>
           <div class="resume-item pb-0">
 
-            <p><em>Highly motivated software engineering undergraduate seeking an internship
-                opportunity focused on frontend development and UI/UX design. Passionate about
-                creating visually appealing and intuitive user interfaces that enhance the user
-                experience. Committed to leveraging my technical skills and creativity to contribute
-                to innovative projects and collaborate with cross-functional teams to deliver
-                exceptional frontend solutions.</em>
+            <p><em> Energetic and ambitious Software Engineering undergraduate with a passion for innovation
+ and a strong desire to gain hands-on experience in software development. Currently seeking
+ an internship opportunity as a Software Developer/Engineer to apply theoretical knowledge
+ gained in the classroom to real-world projects. Possess a solid understanding of software
+ development principles, programming languages, and development methodologies. Proven
+ ability to collaborate effectively in team environments and adapt quickly to new
+ technologies and challenges. Committed to delivering high-quality solutions that meet user
+ needs and exceed expectations.</em>
             </p>
             <p>
             <ul>
@@ -399,6 +401,24 @@
               <li>EEM3366 - Business Studies
               </li>
               <li>EEI3372 -Programming in Python</li>
+            </ul>
+            </p>
+
+            
+            <h6>Jan 2024 - May 2024</h5>
+            <p>
+            <ul>
+              <li>EEI4267 - Requirement Engineering</li>
+              <li>EEX4465- Data Structures and Algorithms
+              </li>
+              <li>MHZ4256- Mathematics for Computing
+              </li>
+              <li>EEY4189 - Software Design in Group
+              </li>
+              <li>EEI5467- Software Testing and Quality Assurance</li>
+              <li>EEI4369 - Mobile Application development for Android</li>
+              <li>EEX4373 - Data Science</li>
+              
             </ul>
             </p>
           </div>
