--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 September 2001</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>muzy12.github.io/Muznaport.github.io/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://muzna12.github.io/Portfolio/</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+94 xxxxxxxxx</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ukuwela,matale,SriLanka</span></li>
               </ul>
@@ -108,8 +108,8 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
-                  <span>fathimamuznamuhajireen@gmail.com</span>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                  <span>muznamuhajireen@gmail.com</span>
                 </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>SriLankan</span></li>
               </ul>
@@ -349,7 +349,7 @@
             <ul>
               <li>172/A, raithalawela,ukuwela</li>
               <li>+94 xxxxxxxxx</li>
-              <li>fathimamuznamuhajireen@gmail.com </li>
+              <li>muznamuhajireen@gmail.com </li>
               <li>ukuwela,matale,Sri Lanka - 21300
               </li>
             </ul>
